# dx12samples

./: .gitignore  CMakeLists.txt
assets/: loading.rawdata  mc256x256.rawdata  mc256x256_0.rawdata  mc256x256_1.rawdata  mc256x256_2.rawdata  mc256x256_3.rawdata  mc512x512_blue.rawdata
cmake/: FindOpenVR.cmake
src/: dbgutils.cpp  dbgutils.hpp  loading.cpp  loading.hlsl  loading.hpp  massive.hlsl  resources.cpp  resources.hpp  scene.hlsl  scene.hpp  serializer.cpp  serializer.hpp  shadow.cpp  shadow.hlsl  shadow.hpp  shadowscene.cpp  sidebyside.hlsl  simple.cpp  simple.hpp  stdafx.cpp  stdafx.h  stereo.cpp  stereo.hpp  texture.hlsl  uniq_device.hpp  vrscene.cpp  win32appbase.cpp  win32appbase.hpp
tools/: header.pl  untabify.el
